<resources>
    <string name="app_name">Honey Im Home</string>

    <string name="home_location_title">Home Location</string>
    <string name="cur_location_title">Current Location</string>
    <string name="latitude_title">Latitude: </string>
    <string name="longitude_title">Longitude: </string>
    <string name="accuracy_title">Accuracy: </string>

    <string name="info_default">Not recorded yet</string>

    <string name="start_tracking">Track Location</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="clear_home">Clear Home\nLocation</string>
    <string name="set_home">Set Location\nas Home</string>
    <string name="set_phone">Set Phone Number</string>
    <string name="test_sms">Test SMS</string>
    <string name="delete_phone">Delete Phone Number</string>

</resources>
